# Poprawiacz-rs

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
docs/: implementation-plan.md  parity-gaps.md  windows-build.md
src/: App.tsx  Titlebar.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: config.rs  lib.rs  logging.rs  prompts.rs
src-tauri/crates/core/src/ai/: anthropic.rs  deepseek.rs  error.rs  gemini.rs  mod.rs  openai.rs  retry.rs  types.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: ai.rs  autostart.rs  clipboard.rs  config.rs  hotkey.rs  logging.rs  mod.rs  tray.rs
src/features/correction/: CorrectionView.tsx  OriginalTextModal.tsx  ProviderPanel.tsx  diff.test.ts  diff.ts  store.test.ts  store.ts  types.ts
src/features/settings/: SettingsDialog.tsx  validation.test.ts  validation.ts
src/lib/: tauri.ts
