[package]
name = "poprawiacz-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic core logic (AI clients, config, prompts) for PoprawiaczTekstu — no GUI/Tauri dependency, testable everywhere."
license = "MIT"

[lib]
name = "poprawiacz_core"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
configparser = "3"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "rt-multi-thread"] }
